--- a/style/components/_all.scss
+++ b/style/components/_all.scss
@@ -1,3 +1,7 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;400&display=swap');
+
 @import "./mobile-menu.scss";
+@import "./button.scss";
+@import "./form.scss";
