--- a/style/components/button.scss
+++ b/style/components/button.scss
@@ -16,3 +16,7 @@ button:active {
     box-shadow: inset 4px 4px 12px #c5c5c5, inset -4px -4px 12px #ffffff;
     min-width: 100%;
    }
+
+.button-primary {
+    background: #00a699;
+   }
