--- a/style/main.scss
+++ b/style/main.scss
@@ -42,9 +42,9 @@ html {
     }
 
     .burger-menu {
-        height: 80%;
-        width: 50px;
-        background-color: lightgreen;
+        height: 32px;
+        width: 32px;
+        // background-color: lightgreen;
     }
 }
 
